--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/create_task_button"
                 android:text="Create"
-            android:visibility="gone"
+            android:visibility="gone"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
