--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/_0007_fondo_app"
     android:gravity="center"
     tools:context="com.puerto7070.epsilonv2.MainActivity">
 
@@ -23,9 +24,9 @@
 
             <ImageButton
                 android:id="@+id/imageButton"
-                android:layout_width="112dp"
-                android:layout_height="106dp"
-                tools:src="@tools:sample/avatars[15]" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:src="@drawable/_0004_icon_profile" />
 
             <TextView
                 android:id="@+id/cronometro"
@@ -113,20 +114,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="project name"
-                android:visibility="gone"
-                android:id="@+id/project_name"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/create_task_button"
-                android:text="Create"
-            android:visibility="gone"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/cancel"
-                android:text="Cancel"
-                android:visibility="gone"/>
+                android:orientation="vertical"
+                android:visibility="visible" />
         </LinearLayout>
 
         <LinearLayout
@@ -179,30 +168,162 @@
         <LinearLayout
             android:id="@+id/info_layout"
             android:layout_width="360dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/background_gradiante_white"
+            android:layout_height="1000dp"
+            android:background="@color/colorAccent"
             android:orientation="vertical"
             android:translationX="-80dp"
             android:visibility="gone"
             tools:layout_editor_absoluteY="372dp">
 
-            <ImageView
-                android:id="@+id/imageView2"
+            <LinearLayout
+                android:id="@+id/profile_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
-                tools:src="@tools:sample/avatars[6]" />
+                android:orientation="vertical">
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Button" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="80dp"
+                        android:visibility="visible"
+                        tools:src="@drawable/_0004_icon_profile" />
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="135dp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/raleway_medium"
+                        android:text="Pepa Suárez"
+                        android:textColor="@android:color/white"
+                        android:textSize="16sp" />
+                </LinearLayout>
+            </LinearLayout>
 
             <Button
                 android:id="@+id/bt_hide_info"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="HideInfo" />
+                android:layout_marginLeft="132dp"
+                android:text="HideInfo"
+                android:visibility="visible" />
+
+            <LinearLayout
+                android:id="@+id/completed_tasks"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="10dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/grey"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="DownHillGame"
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/8j"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Fix movement"
+                        android:textAlignment="center" />
+
+                    <TextView
+                        android:id="@+id/joi"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="2hour  3min"
+                        android:textAlignment="center" />
+                </LinearLayout>
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="10dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/grey"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="DownHillGame"
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Fix friction"
+                        android:textAlignment="center" />
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="1hour 22min"
+                        android:textAlignment="center" />
+                </LinearLayout>
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="10dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/grey"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textVi"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="DownHillGame"
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/ass"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Add gravity"
+                        android:textAlignment="center" />
+
+                    <TextView
+                        android:id="@+id/texsad"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="0h 23min"
+                        android:textAlignment="center" />
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
     </RelativeLayout>
