--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,10 +26,12 @@
             android:gravity="center_horizontal">
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:src="@drawable/logo"
-                android:scaleType="fitCenter"/>
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginBottom="15dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/logo" />
 
         </LinearLayout>
 
@@ -38,9 +40,9 @@
             android:id="@+id/login_form"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="200dp">
+            android:layout_marginTop="100dp"
+            android:orientation="vertical">
 
             <ProgressBar
                 android:id="@+id/login_progress"
@@ -54,38 +56,40 @@
             <AutoCompleteTextView
                 android:id="@+id/email"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/bordeboton"
                 android:hint="@string/prompt_email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:background="@drawable/bordeboton"
-                android:paddingLeft="20dp"/>
+                android:paddingLeft="20dp"
+                android:singleLine="true" />
 
             <EditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bordeboton"
                 android:hint="@string/prompt_password"
                 android:imeActionId="6"
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:background="@drawable/bordeboton"
-                android:layout_marginTop="10dp"
-                android:paddingLeft="20dp"/>
+                android:paddingLeft="20dp"
+                android:singleLine="true" />
 
             <Button
                 android:id="@+id/email_sign_in_button"
                 style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp"
+                android:background="@drawable/enterboton"
                 android:text="@string/action_sign_in"
-                android:textStyle="bold"
-                android:background="@drawable/enterboton"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
