--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#C1FF0201</color>
     <color name="grey">#BEEBEBEB</color>
     <color name="reddd">#ff0201</color>
-    <color name="greyy">#807474</color>
+    <color name="greyy">#B0807474</color>
 
 </resources>
